[project]
name = "sync-helper"
version = "0.1.0"
description = "AI-powered daily standup sync helper for Slack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.26.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
